# rokey-easy-moveit2

./: .gitignore  README.md
.github/: CODEOWNERS
dsr_description2/: CMakeLists.txt  package.xml
dsr_description2/launch/: dsr_description.launch.py
dsr_description2/urdf/: m0609.urdf
dsr_description2/xacro/: m0609.urdf.xacro  macro.m0609.blue.xacro
rg2_description/: CMakeLists.txt  package.xml
rg2_description/config/: rg2_controllers.yaml
rg2_description/launch/: controller.launch.py  display.launch.py  gazebo.launch.py
rg2_description/urdf/: rg2.gazebo.xacro  rg2.ros2_control.xacro  rg2.urdf.xacro  rg2_gripper.macro.xacro
